# OTA-Project

./: .gitignore  CMakeLists.txt
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
ccu/app/src/: main.c
ccu/bootloader/src/: boot_main.c
common/flash/: flash_api.c  flash_api.h
common/include/: ota_common.h
common/net/: net_client.c  net_client.h
common/ota_proto/: ota_common.c  ota_image_header.h
docs/: README.md
ecu/app/src/: main.c
ecu/bootloader/src/: boot_main.c
scripts/: build_all.cmd
server/tools/: ota_server.py
zonal_gateway/app/: CMakeLists.txt
zonal_gateway/app/src/: main.c
zonal_gateway/bootloader/: CMakeLists.txt
zonal_gateway/bootloader/linker/: memory_map_zg.ld
zonal_gateway/bootloader/src/: boot_main.c
